--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,10 @@ repositories {
 
 dependencies {
     // JUnit 5
-    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.7.0'
-    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.0'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.7.0'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.0'
+
+    implementation group: 'org.jgrapht', name: 'jgrapht-core', version: '1.5.0'
 }
 
 test {
