--- a/build.gradle
+++ b/build.gradle
@@ -10,11 +10,12 @@ repositories {
 }
 
 dependencies {
-    // JUnit 5
-    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.7.0'
-    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
 
-    implementation group: 'org.jgrapht', name: 'jgrapht-core', version: '1.5.0'
+    implementation 'org.jgrapht:jgrapht-core:1.5.1'
+    implementation 'org.jgrapht:jgrapht-ext:1.5.1'
+    implementation 'org.jgrapht:jgrapht-io:1.5.1'
 }
 
 test {
