--- a/build.gradle
+++ b/build.gradle
@@ -10,12 +10,15 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
 
     implementation 'org.jgrapht:jgrapht-core:1.5.1'
     implementation 'org.jgrapht:jgrapht-ext:1.5.1'
     implementation 'org.jgrapht:jgrapht-io:1.5.1'
+
+    //https://github.com/dpaukov/combinatoricslib3
+    implementation 'com.github.dpaukov:combinatoricslib3:3.3.3'
 }
 
 test {
